# compilations

./: .gitignore  MANIFEST.in  Makefile  encrypt.sh  filter.enc  index.patch  package-lock.json  package.json  protected.tar.gz.age  secure.sh  setup.py  webpack.config.js
compilations/: Cargo.toml  extractor.rs.age  urls.py  views.py
compilations/src/: api.rs  configuration.rs  endpoints.rs  main.rs  rate_limit.rs  resolver.rs
compilations/static/compilations/css/: style.css
compilations/templates/compilations/: index.html
frontend/: Cargo.toml  Trunk.toml  encrypt.sh  filter.rs.age  index.html  style.css
frontend/src/: api.rs  form.rs  main.rs  video_box.rs  view.rs
js/: index.js
model/: Cargo.toml  lib.rs.age
service/: Cargo.toml
service/src/: main.rs
