[package]
name = "compilations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
tokio = { version = "1.18", features = ["full"] }
oauth2 = "4.1"
axum_database_sessions = "2.0.1"
clap = { version = "3.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
derive_builder = "0.11"
