[package]
name = "compilations"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { path = "../model" }
axum = "0.5"
tokio = { version = "1.18", features = ["full"] }
oauth2 = "4.1"
axum_database_sessions = "2.0.1"
clap = { version = "3.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
derive_builder = "0.11"
serde_yaml = "0.8.24"
include_dir = "0.7.2"
mime_guess = "2.0.4"
tower-http = { version = "0.2", features = ["trace"] }
tracing-subscriber = "0.3"
tracing = "0.1.35"
base64 = "0.13.0"

reqwest = "0.11"
reqwest-middleware = "0.1.6"
reqwest-tracing = "0.2.2"

html5ever = "0.25.0"
kuchiki = "0.8.1"

[dependencies.openssl-sys]
version = "0.9.74"
features = ["vendored"]
