[package]
name = "compilations-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
wasm-logger = "0.2"
log = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Request", "Window", "HtmlSelectElement"] }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
console_error_panic_hook = "0.1"
serde = "1.0"
serde_json = "1.0"
